--- a/blog/b-style.css
+++ b/blog/b-style.css
@@ -3,27 +3,27 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgb(17,17,17);
+    background-color: #F5F5F5;
 }
 body {
-    background-color: rgb(10,10,10);
+    background-color: #C7C7C7;
 }
 a {
-    color: lightsalmon;
+    color: #57D657;
 }
 h1,h2,h3,p {
-    color: white;
+    color: black;
     padding-left: 10px;
 }
 p {
-    color: white;
+    color: black;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 20px;
 }
 h4 {
   padding-left: 10px;
-  color: lightsalmon;
+  color: #57D657;
 }
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -34,33 +34,6 @@ img {vertical-align: middle;}
 .slideshow-container {
   position: relative;
   margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(255, 160, 122, 0.5);
 }
 
 /* Caption text */
@@ -77,59 +50,12 @@ img {vertical-align: middle;}
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.9) 100%);
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 7px;
-  left: 7px;
-  background-color: rgba(0,0,0,0.5);
-  border-radius: 20%;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #888;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: white;
-}
-.dot:hover {
-    background-color: lightsalmon;
-  }
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
 .nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(3,3,3);
+    background-color: #A1E8A1;
 }
 
 .nav-list li {
@@ -140,7 +66,7 @@ img {vertical-align: middle;}
 
 .nav-list li a {
     display: block;
-    color: #ffffff;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -148,7 +74,7 @@ img {vertical-align: middle;}
 }
 
 .nav-list li a:hover {
-    background-color: lightsalmon;
+    background-color: #32CD32;
     opacity: 80%;
     transition: 0.3s;
 }
